--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,6 @@
 # just a flag
 ENV = 'development'
 
-# base api
-VUE_APP_BASE_API = '/dev-api'
+# base api 。初始：http://localhost:9527/dev-api/vue-element-admin/user/login
+// 基础的URL，根据cntrol层的verion设置进行更改。127.0.0.1:7070/payn/login/loginbyaccount
+VUE_APP_BASE_API = '/payn'
